# iSTARMOD

./: README.md  Readme.md  fshift.py  iStarmod_ChiFactor.py  iStarmod_automat_reloaded.py  iStarmod_fits.py  iStarmod_rvvalues.py  iStarmod_tools.py  interp.py  istarmod_cli.py  nhd166620_n2.fits  npwand_n3.fits  nrej1101_foces02_n2.fits  nrej1101_n3_ha.sm  nrej1101_n3_ord37th.sm  pwand_n3_cah_14_wvl.sm  pwand_n3_cah_34_wvl.sm  pwand_n3_cah_44_wvl.sm  pwand_n3_cah_64_wvl.sm  pwand_n3_cah_91_wvl.sm  pwand_n3_cah_92_wvl.sm  pyproject.toml  stackReadSpectra+Shift.py  stackReadSpectra.py  starot.py  support.py  unittestRegSpectra.py  unittest_Normalization.py  unittestreadFITS.py  unittestreadFITS.sm
configsm/: nrej1101_n3_ha.sm  nrej1101_n3_ord37th.sm  pwand_n3_cah_14_wvl.sm  pwand_n3_cah_34_wvl.sm  pwand_n3_cah_44_wvl.sm  pwand_n3_cah_64_wvl.sm  pwand_n3_cah_91_wvl.sm  pwand_n3_cah_92_wvl.sm
referencesp/: nhd92588_n2.fits  nhd97004_n4.fits
source/: iStarmod_alg_class.py  iStarmod_console.py  support.py
src/: gui_iStarmod.py  iStarmod.py  iStarmod_ChiFactor.py  iStarmod_alg_class.py  iStarmod_console.py  iStarmod_fits.py  iStarmod_tools.py  interp.py  starot.py  unittestreadFITS_canvas.py
unittests/: unittestreadFITS.py  unittestreadFITS.sm  unitteststarot.py
