[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iSTARMOD"
version = "11.0"
description = "Python tools for spectral subtraction and chromospheric activity analysis in cool stars"
readme = "README.md"
requires-python = ">=3.50"
license = {file = "LICENSE"}
authors = [
  { name = "Fernando Labarga", email="flabarga@ucm.es" },
  { name = "David Montes", email="dmontes@ucm.es" }
]
keywords = [
  "astronomy",
  "spectroscopy",
  "stellar-activity",
  "chromospheric-activity",
  "spectral-subtraction"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "astropy>=5.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/flabarga/iSTARMOD"
Repository = "https://github.com/flabarga/iSTARMOD"
Issues = "https://github.com/flabarga/iSTARMOD/issues"

[tool.pytest.ini_options]
python_files = ["unittest*.py", "test_*.py"]

[project.scripts]
istarmod = "istarmod_cli:main"

[project.gui-scripts]
istarmod-gui = "gui_iStarmod:main"

[tool.setuptools]
py-modules = [
  "iStarmod_console",
  "gui_iStarmod",
  "istarmod_cli"
]

[tool.setuptools.package-dir]
"" = "src"
